# httomolibgpu

./: .buildinfo  .cirun.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.rst  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  remove_all_stripe.py  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: httomolibgpu.cuda_kernels.doctree  httomolibgpu.cupywrapper.doctree  httomolibgpu.doctree  httomolibgpu.memory_estimator_helpers.doctree  httomolibgpu.misc.corr.doctree  httomolibgpu.misc.denoise.doctree  httomolibgpu.misc.doctree  httomolibgpu.misc.morph.doctree  httomolibgpu.misc.rescale.doctree  httomolibgpu.misc.sorting.doctree  httomolibgpu.misc.supp_func.doctree  httomolibgpu.misc.utils.doctree  httomolibgpu.prep.alignment.doctree  httomolibgpu.prep.doctree  httomolibgpu.prep.normalize.doctree  httomolibgpu.prep.phase.doctree  httomolibgpu.prep.stripe.doctree  httomolibgpu.recon.algorithm.doctree  httomolibgpu.recon.doctree  httomolibgpu.recon.rotation.doctree
.doctrees/bibliography/: biblio.doctree
.doctrees/examples/: Cor_largesino.doctree  DistortionCorr.doctree  pipeline1_FBP.doctree  pipeline2_iterative.doctree
.doctrees/introduction/: about.doctree
.doctrees/reference/: api.doctree  methods.doctree
.github/workflows/: CI.yml  conda_upload.yml  container.yml  doc_conda.yml  httomolibgpu_doc_conda.yml  httomolibgpu_nightly_build.yml  httomolibgpu_pypi_publish.yml  httomolibgpu_tests_run_iris.yml  httomolibgpu_version_tag.yml  httomolibgpu_zenodotests_iris.yml  main-checks.yml  merge-conflicts.yml  nightly_build.yml  pytest.yml  tests_run.yml
.scripts/: conda_upload.sh  download_zenodo.py
_modules/: index.html
_modules/httomolibgpu/: cuda_kernels.html
_sources/: index.rst
_sources/api/: httomolibgpu.cuda_kernels.rst  httomolibgpu.cupywrapper.rst  httomolibgpu.memory_estimator_helpers.rst  httomolibgpu.misc.corr.rst  httomolibgpu.misc.denoise.rst  httomolibgpu.misc.morph.rst  httomolibgpu.misc.rescale.rst  httomolibgpu.misc.rst  httomolibgpu.misc.sorting.rst  httomolibgpu.misc.supp_func.rst  httomolibgpu.misc.utils.rst  httomolibgpu.prep.alignment.rst  httomolibgpu.prep.normalize.rst  httomolibgpu.prep.phase.rst  httomolibgpu.prep.rst  httomolibgpu.recon.algorithm.rst  httomolibgpu.recon.rst  httomolibgpu.rst
_sources/examples/: Cor_largesino.ipynb
_sources/introduction/: about.rst
_sources/reference/: api.rst  methods.rst
_static/: documentation_options.js
api/: httomolibgpu.cuda_kernels.html  httomolibgpu.cupywrapper.html  httomolibgpu.html  httomolibgpu.memory_estimator_helpers.html  httomolibgpu.misc.corr.html  httomolibgpu.misc.denoise.html  httomolibgpu.misc.html  httomolibgpu.misc.morph.html  httomolibgpu.misc.rescale.html  httomolibgpu.misc.sorting.html  httomolibgpu.misc.supp_func.html  httomolibgpu.misc.utils.html  httomolibgpu.prep.alignment.html  httomolibgpu.prep.html  httomolibgpu.prep.normalize.html  httomolibgpu.prep.phase.html  httomolibgpu.prep.stripe.html  httomolibgpu.recon.algorithm.html  httomolibgpu.recon.html  httomolibgpu.recon.rotation.html
bibliography/: biblio.html
conda/: environment.yml  explicit.txt
conda/recipe/: build.sh  conda_build_config.yaml  meta.yaml
doc/: decorators.rst
docs/: sphinx-build.sh  sphinx_build_setup.rst
docs/source/: conf.py  doc-conda-requirements.yml  index.rst  metrics_calculate.py
examples/: Cor_largesino.html  DistortionCorr.html  DistortionCorr.ipynb  correct-distortion.py  fresnel-filter.py  normalize-data.py  paganin-filter.py  pipeline1_FBP.html  pipeline1_FBP.ipynb  pipeline2_iterative.html  pipeline2_iterative.ipynb  pipeline_preproc.py
httomolib/: __init__.py  decorator.py
httomolib/cuda_kernels/: __init__.py  center_360_shifts.cu  generate_filtersync.cu  generate_mask.cu  median_kernel.cu
httomolib/misc/: corr.py  images.py  morph.py  segm.py
httomolib/prep/: alignment.py  normalize.py  phase.py  stripe.py
httomolib/recon/: algorithm.py  rotation.py
httomolibgpu/: __init__.py  cupywrapper.py  decorator.py
httomolibgpu/cuda_kernels/: __init__.py  calc_metrics.cu  center_360_shifts.cu  downsample_sino.cu  generate_mask.cu  median_kernel.cu  paganin_filter_gen.cu  raven_filter.cu  remove_nan_inf.cu  remove_stripe_fw.cu
httomolibgpu/misc/: corr.py  denoise.py  morph.py  raven_filter.py  rescale.py  sorting.py  supp_func.py  utils.py
httomolibgpu/prep/: alignment.py  normalize.py  phase.py  stripe.py
httomolibgpu/recon/: _phase_cross_correlation.py  algorithm.py  rotation.py
introduction/: about.html
recipe/: build.sh  conda_build_config.yaml  meta.yaml
reference/: api.html  methods.html
reference/methods_list/: correction_methods.html  denoising_methods.html  median_filter.html  outlier_removal.html  phase_contrast_methods.html  raven_filter.html  reconstruction_methods.html  remove_all_stripe.html  remove_stripe_based_sorting.html  remove_stripe_ti.html  rescale_methods.html  rescale_to_int.html  stripe_removal_methods.html  total_variation_PD.html  total_variation_ROF.html
src/: loaders.py  savers.py  utils.py
src/httomolib/: __init__.py  centering.py  correction.py  filtering.py  normalisation.py  stripe_removal.py
tests/: __init__.py  conftest.py  test_centering.py  test_correction.py  test_decorator.py  test_filtering.py  test_normalisation.py  test_pipeline.py  test_stripe_removal.py  tomopy_testing_modules.yml
tests/test_misc/: test_corr.py  test_denoise.py  test_images.py  test_morph.py  test_rescale.py  test_segm.py  test_sorting.py  test_supp_func.py  test_utils.py
tests/test_prep/: stripe_cpu_reference.py  test_alignment.py  test_normalize.py  test_phase.py  test_stripe.py
tests/test_recon/: rotation_cpu_reference.py  test_algorithm.py  test_recon.py  test_rotation.py
zenodo-tests/: conftest.py
zenodo-tests/test_misc/: test_morph.py  test_rescale.py
zenodo-tests/test_prep/: test_phase.py  test_stripe.py
zenodo-tests/test_recon/: test_algorithm.py  test_rotation.py
(+134 files in other folders)
