[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["httomolibgpu",
            "httomolibgpu.misc",
            "httomolibgpu.prep",
            "httomolibgpu.recon",
            "httomolibgpu.cuda_kernels"]

[tool.setuptools.package-data]
httomolibgpu = ["*.cu", "*.cuh"]    # include cuda kernels in package

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"

[project]
name = "httomolibgpu"
description = "Commonly used tomography data processing methods at DLS."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Daniil Kazantsev", email = "daniil.kazantsev@diamond.ac.uk"},
    {name = "Yousef Moazzam", email = "yousef.moazzam@diamond.ac.uk"},
    {name = "Naman Gera", email = "naman.gera@diamond.ac.uk"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Environment :: GPU :: NVIDIA CUDA"
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "cupy",
    "numpy",
    "scipy",
    "pillow",
    "scikit-image",
    "tomobar"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "pytest-benchmark",
  "flake8",
  "pyproject-flake8",
  "pydocstyle",
  "toml",
  "imageio",
  "h5py",
  "pre-commit"
]


[project.urls]
"Repository" = "https://github.com/DiamondLightSource/httomolibgpu"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
   "-vv",
   "-ra",
   "-q",
   "--benchmark-sort=mean",
   "--benchmark-columns=mean",
   "--tb=native",
   "--cov-report=term",
   "--cov-report=xml:cov.xml",
]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnknownMarkWarning",
    "ignore::scipy.stats.ConstantInputWarning",
]

[tool.coverage.run]
data_file = "/tmp/httomolibgpu.coverage"

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = [
    "httomolibgpu",
    "**/site-packages/"
]

[tool.mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = true

[tool.isort]
profile = "black"
float_to_top = true

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D100", # Ignore missing docstrings in public modules
    "D104", # Ignore missing docstrings in public packages
    "D418", # Ignore missing docstrings in dunder methods; See: https://github.com/PyCQA/pydocstyle/issues/525
]

[tool.flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore = [
    "E203",
    "F811"
]
per-file-ignores = [
    "*pyi:E302"
]
